--- a/ayuda.html
+++ b/ayuda.html
@@ -5,16 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Meta tags -->
+  <meta name="description" content="Cascos, indumentaria, accesorios, lubricantes y repuestos para el motociclista, tanto profesional como aficionado">
+  <meta name="keywords" content="Motociclismo, cascos, indumentaria, accesorios, lubricantes, repuestos, tienda online, atención personalizada, ofertas especiales,
+  asesoramiento directo de fábrica">
+  <meta name="author" content= "Pedro Gagliardi">
+
+  <!-- Open graph -->
+  <meta property="og:title" content="Del Bene Motoshop">
+  <meta property="og:description" content="Motociclismo, cascos, indumentaria, accesorios, lubricantes, repuestos, tienda online, atención personalizada, ofertas especiales,
+  asesoramiento directo de fábrica">
+  <meta property="og:site_name" content="Del Bene Motoshop">
+  <meta property="og:image" content="file:///C:/Users/Dell/Desktop/Coder-18220/Proyecto-de-cero-con-sass/imagenes/logoDelBene.png">
+  <meta property="og:locale" content="es_ES">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="imagenes/logoDelBeneIco.ico" type="image/x-icon">
+
+  <!-- Fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
-  <title>Del Bene Motoshop</title>
+
+  <title>Del Bene Motoshop - Ayuda</title>
 </head>
 <body class="body-container">
 
@@ -59,13 +78,14 @@
     <div class="container-img">
       <img src="imagenes/logoDelBene.png" alt="logo" class="img">
       <div class="texto-header-container">
-        <p class="texto-header">Desde 2020 brindando soluciones para el motociclista.</p>
+        <h1>Del Bene MOTOSHOP</h1>
+        <h2>Desde 2020 brindando soluciones para el motociclista.</h2>
       </div>      
     </div>
   </header>
   <!-- Fin encabezado -->
 
-  <!-- Inicio sección "preguntas frecuentes "-->
+  <!-- Inicio sección 1 "preguntas frecuentes "-->
   <section class="ayuda">
     <div>
       <h1>PREGUNTAS FRECUENTES</h1> 
@@ -120,8 +140,7 @@
       <h3>ALGO QUE COMPRÉ NO ME SATISFACE UN 100%, ¿PUEDO DEVOLVERLO?</h3>
       <p>Sí, podes pedir el reintegro del dinero de todo lo que compres en www.ls2.com.ar siempre y cuando el producto no haya sido utilizado y conserve todas las etiquetas y envoltorios originales. Para esto tenes hasta 30 días (luego de haber recibido la compra) para contactarte con nosotros y solicitarlo. 
         De esta forma, vas a poder realizar una nueva compra seleccionando el producto, color y talle que desees.
-      </p>
-        
+      </p>        
         
       <h3>¿CUÁNTO TIEMPO TENGO PARA HACER LA DEVOLUCIÓN?</h3>
       <p>Si el producto adquirido presenta las mismas condiciones en las que fue recibido o comprado (etiqueta y envoltorio) contás hasta 30 (treinta) días consecutivos desde la recepción del producto para solicitar la devolución del dinero.</p> 
@@ -137,6 +156,13 @@
       <p>Si el producto llegara a presentar una falla de fabricación, deberás ponerte en contacto con nosotros a ls2store@servicomglobal.com informando el número del pedido y el producto fallado, para que podamos indicarte los pasos a seguir.</p> 
     </div>               
   </section>
+  <!-- Fin sección 1 -->
+
+  <!-- Sección 2 -->
+  <section class="h2-redes">
+    <h2>Visitá nuestras redes sociales!</h2>
+  </section>
+  <!-- Fin sección 2 -->
 
   <!-- Nav bar -->
   <section class="footer-container">
