--- a/index.html
+++ b/index.html
@@ -5,16 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+  <!-- Meta tags -->
+  <meta name="description" content="Cascos, indumentaria, accesorios, lubricantes y repuestos para el motociclista, tanto profesional como aficionado">
+  <meta name="keywords" content="Motociclismo, cascos, indumentaria, accesorios, lubricantes, repuestos, tienda online, atención personalizada, ofertas especiales,
+  asesoramiento directo de fábrica">
+  <meta name="author" content= "Pedro Gagliardi">
+
+  <!-- Open graph -->
+  <meta property="og:title" content="Del Bene Motoshop">
+  <meta property="og:description" content="Motociclismo, cascos, indumentaria, accesorios, lubricantes, repuestos, tienda online, atención personalizada, ofertas especiales,
+  asesoramiento directo de fábrica">
+  <meta property="og:site_name" content="Del Bene Motoshop">
+  <meta property="og:image" content="file:///C:/Users/Dell/Desktop/Coder-18220/Proyecto-de-cero-con-sass/imagenes/logoDelBene.png">
+  <meta property="og:locale" content="es_ES">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="imagenes/logoDelBeneIco.ico" type="image/x-icon">
+
+  <!-- Fuentes -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
-  <title>Del Bene Motoshop</title>
+
+  <title>Del Bene Motoshop - TODO para el motociclista</title>
 </head>
 <body class="body-container">
 
@@ -57,9 +76,10 @@
       </div>      
     </nav>
     <div class="container-img">
-      <img src="imagenes/logoDelBene.png" alt="logo" class="img">
+      <img src="imagenes/logoDelBene.png" alt="Logo MotoShop" class="img">
       <div class="texto-header-container">
-        <p class="texto-header">Desde 2020 brindando soluciones para el motociclista.</p>
+        <h1>Del Bene MOTOSHOP</h1>
+        <h2>Desde 2020 brindando soluciones para el motociclista.</h2>
       </div>      
     </div>
   </header>
@@ -150,7 +170,7 @@
         </div>
       </div>      
     </nav>   
-
+    
     <!-- Inicio footer -->
     <footer>    
       <nav class="zona-nav-footer">           
