--- a/ofertas.html
+++ b/ofertas.html
@@ -5,16 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+  <!-- Meta tags -->
+  <meta name="description" content="Cascos, indumentaria, accesorios, lubricantes y repuestos para el motociclista, tanto profesional como aficionado">
+  <meta name="keywords" content="Motociclismo, cascos, indumentaria, accesorios, lubricantes, repuestos, tienda online, atención personalizada, ofertas especiales,
+  asesoramiento directo de fábrica">
+  <meta name="author" content= "Pedro Gagliardi">
+
+  <!-- Open graph -->
+  <meta property="og:title" content="Del Bene Motoshop">
+  <meta property="og:description" content="Motociclismo, cascos, indumentaria, accesorios, lubricantes, repuestos, tienda online, atención personalizada, ofertas especiales,
+  asesoramiento directo de fábrica">
+  <meta property="og:site_name" content="Del Bene Motoshop">
+  <meta property="og:image" content="file:///C:/Users/Dell/Desktop/Coder-18220/Proyecto-de-cero-con-sass/imagenes/logoDelBene.png">
+  <meta property="og:locale" content="es_ES">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="imagenes/logoDelBeneIco.ico" type="image/x-icon">
+
+  <!-- Fuentes -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
-  <title>Del Bene Motoshop</title>
+
+  <title>Del Bene Motoshop - Ofertas</title>
 </head>
 <body class="body-container">
 
@@ -59,13 +78,14 @@
     <div class="container-img">
       <img src="imagenes/logoDelBene.png" alt="logo" class="img">
       <div class="texto-header-container">
-        <p class="texto-header">Desde 2020 brindando soluciones para el motociclista.</p>
+        <h1>Del Bene MOTOSHOP</h1>
+        <h2>Desde 2020 brindando soluciones para el motociclista.</h2>
       </div>      
     </div>
   </header>
   <!-- Fin encabezado -->
 
-  <!-- Sección ofertas -->
+  <!-- Sección 1 ofertas -->
   <div>
     <h1>EXCLUSIVOS VENTA TELEFÓNICA! 40% OF SOBRE PRECIO DE LISTA</h1>
   </div>
@@ -96,7 +116,13 @@
   <div> 
     <h2>COMUNICATE LLAMANDO POR TELÉFONO O VÍA WHATSAPP!</h2>
   </div>   
-  <!-- Fin sección ofertas -->
+  <!-- Fin sección 1 ofertas -->
+
+  <!-- Sección 2 -->
+  <section class="h2-redes">
+    <h2>Visitá nuestras redes sociales!</h2>
+  </section>
+  <!-- Fin sección 2 -->
 
   <!-- Nav bar -->
   <section class="footer-container">
