Agregué etiquetas blank a los enlaces de redes sociales y maps. Mejoré el responsive en tabley y laptop. Falta en mobile

--- a/cascos.html
+++ b/cascos.html
@@ -101,49 +101,49 @@
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Cascos/cascoLs2Dos.jpg" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">LS2 352 Kascal Mate Neon Fucsia - $20.190</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Cascos/cascoLs2Tres.jpg" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">LS2 352 437 Fast Block Blanco - $32.390</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Cascos/cascoAlpinestarUno.jpg" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">ALPINESTAR Tech X Space - $19.090</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Cascos/cascoAlpinestarDos.png" class="imagenes-venta">
       <p class="nombre-y-precio">ALPINESTAR Suprnova White - $23.900</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Cascos/cascoMacUno.jpg" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">MAC Fenix Solid Negro - $20.190</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Cascos/cascoMacDos.jpg" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">MAC Beat Vayro Blanco Rosa - $13.029</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Cascos/cascoMacTres.jpg" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">MAC Virtus Sharp Negro Mate - $19.090</p>
       <div class="boton-comprar">
@@ -155,7 +155,7 @@
 
   <!-- Sección 3 -->
   <section class="h2-redes">
-    <h2>Visitá nuestras redes sociales!</h2>
+    <h2 class="h2-texto">Visitá nuestras redes sociales!</h2>
   </section>
 
   <!-- Nav bar -->
@@ -208,9 +208,9 @@
         </ul>
         <div>  
           <ul class="redes-sociales">
-            <li class="lista-redes"><a href="https://www.facebook.com/delbene.motoshop"><img src="imagenes/redes-sociales/icono-facebook.png" alt="" class="icono-facebook"></a></li>
-            <li class="lista-redes"><a href="https://instagram.com/delbenemotoshop?utm_medium=copy_link"><img src="imagenes/redes-sociales/logo-instagram.png" alt="" class="icono-instagram"></a></li>
-            <li class="lista-redes"><a href="https://g.page/del-bene-motoshop?share"><img src="imagenes/redes-sociales/logo-maps.png" alt="" class="icono-maps"></a></li>       
+            <li class="lista-redes"><a href="https://www.facebook.com/delbene.motoshop" target="_blank"><img src="imagenes/redes-sociales/icono-facebook.png" alt="" class="icono-facebook"></a></li>
+            <li class="lista-redes"><a href="https://instagram.com/delbenemotoshop?utm_medium=copy_link" target="_blank"><img src="imagenes/redes-sociales/logo-instagram.png" alt="" class="icono-instagram"></a></li>
+            <li class="lista-redes"><a href="https://g.page/del-bene-motoshop?share" target="_blank"><img src="imagenes/redes-sociales/logo-maps.png" alt="" class="icono-maps"></a></li>   
           </ul>   
         </div>     
       </nav>                    
