--- a/contacto.html
+++ b/contacto.html
@@ -101,7 +101,7 @@
 
   <!-- Sección 2 -->
   <section class="h2-redes">
-    <h2>Visitá nuestras redes sociales!</h2>
+    <h2 class="h2-texto">Visitá nuestras redes sociales!</h2>
   </section>
   <!-- Fin sección 2 -->
 
@@ -156,9 +156,9 @@
         </ul>
         <div>  
           <ul class="redes-sociales">
-            <li class="lista-redes"><a href="https://www.facebook.com/delbene.motoshop"><img src="imagenes/redes-sociales/icono-facebook.png" alt="" class="icono-facebook"></a></li>
-            <li class="lista-redes"><a href="https://instagram.com/delbenemotoshop?utm_medium=copy_link"><img src="imagenes/redes-sociales/logo-instagram.png" alt="" class="icono-instagram"></a></li>
-            <li class="lista-redes"><a href="https://g.page/del-bene-motoshop?share"><img src="imagenes/redes-sociales/logo-maps.png" alt="" class="icono-maps"></a></li>       
+            <li class="lista-redes"><a href="https://www.facebook.com/delbene.motoshop" target="_blank"><img src="imagenes/redes-sociales/icono-facebook.png" alt="" class="icono-facebook"></a></li>
+            <li class="lista-redes"><a href="https://instagram.com/delbenemotoshop?utm_medium=copy_link" target="_blank"><img src="imagenes/redes-sociales/logo-instagram.png" alt="" class="icono-instagram"></a></li>
+            <li class="lista-redes"><a href="https://g.page/del-bene-motoshop?share" target="_blank"><img src="imagenes/redes-sociales/logo-maps.png" alt="" class="icono-maps"></a></li>      
           </ul>   
         </div>     
       </nav>                    
