--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </ul>
         <div>  
           <ul class="redes-sociales">
-            <li class="lista-redes"><a href="https://www.facebook.com/delbene.motoshop"><img src="imagenes/redes-sociales/icono-facebook.png" alt="" class="icono-facebook"></a></li>
+            <li class="lista-redes"><a href="https://www.facebook.com/delbene.motoshop" target="_blank"><img src="imagenes/redes-sociales/icono-facebook.png" alt="" class="icono-facebook"></a></li>
             <li class="lista-redes"><a href="https://instagram.com/delbenemotoshop?utm_medium=copy_link"><img src="imagenes/redes-sociales/logo-instagram.png" alt="" class="icono-instagram"></a></li>
             <li class="lista-redes"><a href="https://g.page/del-bene-motoshop?share"><img src="imagenes/redes-sociales/logo-maps.png" alt="" class="icono-maps"></a></li>       
           </ul>   
