--- a/lubricantes.html
+++ b/lubricantes.html
@@ -101,49 +101,49 @@
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Lubricantes/lubricanteIponeDos.png" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">IPONE Lubticante 4T Katana - $3.800</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Lubricantes/lubricanteIponeTres.png" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">IPONE Lubticante Cadena Dextrone - $2.500</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Lubricantes/lubricanteIponeCuatro.png" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">IPONE Lubticante Fork Fluid - $2.900</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Lubricantes/lubricanteMotulUno.jpg" class="imagenes-venta">
       <p class="nombre-y-precio">MOTUL Lubricante 2T Factory Line - $6.000</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Lubricantes/lubricanteMotulDos.jpg" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">MOTUL Lubricante Horquilla Fork Oil - $4.600</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Lubricantes/lubricanteAmaUno.webp" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">AMA Lubricante 2T 2CR Pro - $8.900</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
-    <div>
+    <div class="container-imagen">
       <img src="imagenes/Lubricantes/lubricanteAmaDos.webp" alt="" class="imagenes-venta">
       <p class="nombre-y-precio">AMA Lubricante 4T XL 100 - $7.200</p>
       <div class="boton-comprar">
@@ -151,11 +151,11 @@
       </div>      
     </div>
   </section>
-  <!-- Fin sección 2 venta cascos -->
+  <!-- Fin sección 2 -->
 
   <!-- Sección 3 -->
   <section class="h2-redes">
-    <h2>Visitá nuestras redes sociales!</h2>
+    <h2 class="h2-texto">Visitá nuestras redes sociales!</h2>
   </section>
   <!-- Fin sección 3 -->
 
@@ -210,9 +210,9 @@
       </ul>
       <div>  
         <ul class="redes-sociales">
-          <li class="lista-redes"><a href="https://www.facebook.com/delbene.motoshop"><img src="imagenes/redes-sociales/icono-facebook.png" alt="" class="icono-facebook"></a></li>
-          <li class="lista-redes"><a href="https://instagram.com/delbenemotoshop?utm_medium=copy_link"><img src="imagenes/redes-sociales/logo-instagram.png" alt="" class="icono-instagram"></a></li>
-          <li class="lista-redes"><a href="https://g.page/del-bene-motoshop?share"><img src="imagenes/redes-sociales/logo-maps.png" alt="" class="icono-maps"></a></li>       
+          <li class="lista-redes"><a href="https://www.facebook.com/delbene.motoshop" target="_blank"><img src="imagenes/redes-sociales/icono-facebook.png" alt="" class="icono-facebook"></a></li>
+            <li class="lista-redes"><a href="https://instagram.com/delbenemotoshop?utm_medium=copy_link" target="_blank"><img src="imagenes/redes-sociales/logo-instagram.png" alt="" class="icono-instagram"></a></li>
+            <li class="lista-redes"><a href="https://g.page/del-bene-motoshop?share" target="_blank"><img src="imagenes/redes-sociales/logo-maps.png" alt="" class="icono-maps"></a></li>         
         </ul>   
       </div>     
     </nav>                    
