--- a/indumentaria.html
+++ b/indumentaria.html
@@ -79,7 +79,7 @@
       <img src="imagenes/logoDelBene.png" alt="logo" class="img">
       <div class="texto-header-container">
         <h1>Del Bene MOTOSHOP</h1>
-        <h2>Desde 2020 brindando soluciones para el motociclista.</h2>
+        <h2 class="h2-header">Desde 2020 brindando soluciones para el motociclista.</h2>
       </div>      
     </div>
   </header>
@@ -110,7 +110,7 @@
     </div>
     <div class="container-imagen">
       <img src="imagenes/Indumentaria/guantesLs2Uno.jpg" alt="" class="imagenes-venta">
-      <p class="nombre-y-precio">LS2 Guantes Cortos Invierno - >$8.500</p>
+      <p class="nombre-y-precio">LS2 Guantes Cortos Invierno - $8.500</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
@@ -124,14 +124,14 @@
     </div>
     <div class="container-imagen">
       <img src="imagenes/Indumentaria/conjuntoAlpinestarUno.jpg" class="imagenes-venta">
-      <p class="nombre-y-precio">ALPINESTAR Conjunto Hercules - >$45.000</p>
+      <p class="nombre-y-precio">ALPINESTAR Conjunto Hercules - $45.000</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
     </div>
     <div class="container-imagen">
       <img src="imagenes/Indumentaria/conjuntoAlpinestarDos.jpg" alt="" class="imagenes-venta">
-      <p class="nombre-y-precio">ALPINESTAR Conjunto Donovan - >$40.590</p>
+      <p class="nombre-y-precio">ALPINESTAR Conjunto Donovan - $40.590</p>
       <div class="boton-comprar">
         <button type="button" class="btn btn-outline-dark">Comprar</button>
       </div>      
@@ -152,12 +152,6 @@
     </div>
   </section>
   <!-- Fin sección 2 venta indumentaria -->
-
-  <!-- Sección 3 -->
-  <section class="h2-redes">
-    <h2 class="h2-texto">Visitá nuestras redes sociales!</h2>
-  </section>
-  <!-- Fin sección 3 -->
 
   <!-- Nav bar -->
   <section class="footer-container">
