--- a/accesorios.html
+++ b/accesorios.html
@@ -79,7 +79,7 @@
       <img src="imagenes/logoDelBene.png" alt="logo" class="img">
       <div class="texto-header-container">
         <h1>Del Bene MOTOSHOP</h1>
-        <h2>Desde 2020 brindando soluciones para el motociclista.</h2>
+        <h2 class="h2-header">Desde 2020 brindando soluciones para el motociclista.</h2>
       </div>      
     </div>
   </header>
@@ -152,12 +152,6 @@
     </div>
   </section>
   <!-- Fin sección 2 venta accesorios -->  
-
-  <!-- Sección 3 -->
-  <section class="h2-redes">
-    <h2 class="h2-texto">Visitá nuestras redes sociales!</h2>
-  </section>
-  <!-- Fin sección 3 -->  
 
   <!-- Nav bar -->
   <section class="footer-container">
