--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <div class="container-img">
       <img src="imagenes/logoDelBene.png" alt="Logo MotoShop" class="img">
       <div class="texto-header-container">
-        <h1>Del Bene MOTOSHOP</h1>
-        <h2>Desde 2020 brindando soluciones para el motociclista.</h2>
+        <h1 class="h1-header">Del Bene MOTOSHOP</h1>
+        <h2 class="h2-header">Desde 2020 brindando soluciones para el motociclista.</h2>
       </div>      
     </div>
   </header>
@@ -117,7 +117,7 @@
   <!-- Fin sección 1 -->
 
   <!-- Sección 2 -->
-  <section>
+  <section class="section2-container">
     <div>
       <div>
         <img src="imagenes/destacadosNineToOne.jpg" alt="" class="img-destacados">
