--- a/ofertas.html
+++ b/ofertas.html
@@ -79,7 +79,7 @@
       <img src="imagenes/logoDelBene.png" alt="logo" class="img">
       <div class="texto-header-container">
         <h1>Del Bene MOTOSHOP</h1>
-        <h2>Desde 2020 brindando soluciones para el motociclista.</h2>
+        <h2 class="h2-header">Desde 2020 brindando soluciones para el motociclista.</h2>
       </div>      
     </div>
   </header>
@@ -117,12 +117,6 @@
     <h2>COMUNICATE LLAMANDO POR TELÉFONO O VÍA WHATSAPP!</h2>
   </div>   
   <!-- Fin sección 1 ofertas -->
-
-  <!-- Sección 2 -->
-  <section class="h2-redes">
-    <h2 class="h2-texto">Visitá nuestras redes sociales!</h2>
-  </section>
-  <!-- Fin sección 2 -->
 
   <!-- Nav bar -->
   <section class="footer-container">
