Agregué datos al archivo packaje.json y modifiqué textos en todas las secciones. Cambié nombres de variables para que sean más claras

--- a/accesorios.html
+++ b/accesorios.html
@@ -86,7 +86,7 @@
   <!-- Fin encabezado -->
 
   <!-- Sección 1 -->
-  <section>
+  <section class="encabezados">
     <h1>Amplia gama de accesorios Protaper en stock y a pedido</h1>
     <h2>Consultá por compra por mayor!</h2>
   </section>
