--- a/ayuda.html
+++ b/ayuda.html
@@ -76,7 +76,11 @@
       </div>      
     </nav>
     <div class="container-img">
-      <img src="imagenes/logoDelBene.png" alt="logo" class="img">          
+      <img src="imagenes/logoDelBene.png" alt="logo" class="img">    
+      <div class="texto-header-container">
+        <h1 class="h1-header">Del Bene MOTOSHOP</h1>
+        <h2 class="h2-header">Desde 2020 brindando soluciones para el motociclista.</h2>
+      </div>            
     </div>
   </header>
   <!-- Fin encabezado -->
@@ -149,7 +153,7 @@
       <P> Para cancelar tu pedido deberás ponerte en contacto con nosotros enviándonos un mail a delbenemotoshop@gmail.com</P>
         
       <h3>¿QUÉ PASA SI EL PRODUCTO TIENE UNA FALLA?</h3>
-      <p>Si el producto llegara a presentar una falla de fabricación, deberás ponerte en contacto con nosotros a ls2store@servicomglobal.com informando el número del pedido y el producto fallado, para que podamos indicarte los pasos a seguir.</p> 
+      <p>Si el producto llegara a presentar una falla de fabricación, deberás ponerte en contacto con nosotros a delbenemotoshop@gmail.com informando el número del pedido y el producto fallado, para que podamos indicarte los pasos a seguir.</p> 
     </div>               
   </section>
   <!-- Fin sección 1 -->
