--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
+  
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
 
   <title>Del Bene Motoshop - TODO para el motociclista</title>
 </head>
-<body class="body-container">
+<body class="body-container">  
 
   <!-- Inicio encabezado -->
   <header>
@@ -120,13 +120,13 @@
   <section class="section2-container">
     <div>
       <div>
-        <img src="imagenes/destacadosNineToOne.jpg" alt="" class="img-destacados">
+        <img src="imagenes/destacadosNineToOne.jpg" alt="" class="img-destacados-1">
       </div>
       <div>
-        <img src="imagenes/destacados.jpg" alt="" class="img-destacados">
+        <img src="imagenes/destacados.jpg" alt="" class="img-destacados-2">
       </div>
       <div>
-        <img src="imagenes/baner1.png" alt="" class="img-destacados">
+        <img src="imagenes/baner1.png" alt="" class="img-destacados-3">
       </div>
     </div>
   </section>
@@ -178,13 +178,13 @@
           <li>Mail: delbenemotoshop@gmail.com</li>
           <li>Whatsapp: 11 6350 8103</li>
           <li>Tel.: (0220) 477 1196 </li>
-          <li>Dirección: Ruta prov. N° 40 1539 - Marcos Paz</li>                  
+          <li>Dirección: Dr. Marcos Paz (RP N° 40) 1539 - Marcos Paz (Bs. As)</li>                  
         </ul>
         <div>  
           <ul class="redes-sociales">
-            <li class="lista-redes"><a href="https://www.facebook.com/delbene.motoshop" target="_blank"><img src="imagenes/redes-sociales/icono-facebook.png" alt="" class="icono-facebook"></a></li>
-            <li class="lista-redes"><a href="https://instagram.com/delbenemotoshop?utm_medium=copy_link" target="_blank"><img src="imagenes/redes-sociales/logo-instagram.png" alt="" class="icono-instagram"></a></li>
-            <li class="lista-redes"><a href="https://g.page/del-bene-motoshop?share" target="_blank"><img src="imagenes/redes-sociales/logo-maps.png" alt="" class="icono-maps"></a></li>       
+            <li class="lista-redes"><a href="https://www.facebook.com/delbene.motoshop" target="_blank" rel="noopener"><img src="imagenes/redes-sociales/icono-facebook.png" alt="Facebook" class="icono-facebook"></a></li>
+            <li class="lista-redes"><a href="https://instagram.com/delbenemotoshop?utm_medium=copy_link" target="_blank" rel="noopener"><img src="imagenes/redes-sociales/logo-instagram.png" alt="Instagram" class="icono-instagram"></a></li>
+            <li class="lista-redes"><a href="https://g.page/del-bene-motoshop?share" target="_blank" rel="noopener"><img src="imagenes/redes-sociales/logo-maps.png" alt="Ubicación" class="icono-maps"></a></li>       
           </ul>   
         </div>     
       </nav>                    
