--- a/indumentaria.html
+++ b/indumentaria.html
@@ -86,7 +86,7 @@
   <!-- Fin encabezado -->
 
   <!-- Sección 1 -->
-  <section>
+  <section class="encabezados">
     <h1>Camperas, guantes, remeras trajes de lluvia y más!</h1>
     <h2>Consultá por talle y stock</h2>
   </section>
