--- a/lubricantes.html
+++ b/lubricantes.html
@@ -86,7 +86,7 @@
   <!-- Fin encabezado -->
 
   <!-- Sección 1 -->
-  <section>
+  <section class="encabezados">
     <h1>Distribuidores oficiales Motul - Ipone - AMA</h1>
     <h2>Próximamente: service personalizado</h2>
   </section>
