--- a/cascos.html
+++ b/cascos.html
@@ -86,7 +86,7 @@
   <!-- Fin encabezado -->
 
   <!-- Sección 1 -->
-  <section>
+  <section class="encabezados">
     <h1>Toda la línea LS2, MAC Y Alpinestar!</h1>
     <h2>Consultá por talle y stock</h2>
   </section>
