--- a/contacto.html
+++ b/contacto.html
@@ -78,7 +78,7 @@
     <div class="container-img">
       <img src="imagenes/logoDelBene.png" alt="logo" class="img">
       <div class="texto-header-container">
-        <h1>Del Bene MOTOSHOP</h1>
+        <h1>Desde 1950 en el rubro automotor</h1>
         <h2 class="h2-header">Desde 2020 brindando soluciones para el motociclista.</h2>
       </div>      
   </header>
