--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     </nav>
     <div class="container-img">
       <img src="imagenes/logoDelBene.png" alt="Logo MotoShop" class="img">
-      <div class="texto-header-container">
-        <h1 class="h1-header">Del Bene MOTOSHOP</h1>
-        <h2 class="h2-header">Desde 2020 brindando soluciones para el motociclista.</h2>
+      <div class="texto-header-container">    
+        <h1>Desde 1950 en el rubro automotor</h1>    
+        <h2 class="h2-header"> Desde 2020 brindando soluciones para el motociclista </h2>
       </div>      
     </div>
   </header>
@@ -90,26 +90,32 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="imagenes/Cascos/cascoLs2Uno.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/Cascos/cascoLs2Uno.jpg" class="d-block w-100" alt="Casco LS2">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/Cascos/cascoLs2Dos.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/Accesorios/accesoriosProTaperSeis.jpg" class="d-block w-100" alt="Manubrio Protaper">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/Cascos/cascoLs2Tres.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/Indumentaria/camperaLs2Dos.jpg" class="d-block w-100" alt="Campera LS2">
+        </div>
+        <div class="carousel-item">
+          <img src="imagenes/Lubricantes/lubricanteAmaUno.webp" class="d-block w-100" alt="Lubricante Ama 1">
         </div>
       </div>
     </div>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="imagenes/Cascos/cascoMacUno.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/Cascos/cascoMacUno.jpg" class="d-block w-100" alt="Casco MAC">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/Cascos/cascoMacDos.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/Indumentaria/conjuntoAlpinestarDos.jpg" class="d-block w-100" alt="Conjunto Alpinestar">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/Cascos/cascoMacTres.jpg" class="d-block w-100" alt="...">          
+          <img src="imagenes/Accesorios/accesoriosProTaperTres.jpg" class="d-block w-100" alt="Freno Protaper">          
+        </div>
+        <div class="carousel-item">
+          <img src="imagenes/Lubricantes/lubricanteAmaDos.webp" class="d-block w-100" alt="Lubricante AMA 2">          
         </div>
       </div>
     </div>
@@ -173,14 +179,16 @@
     
     <!-- Inicio footer -->
     <footer>    
-      <nav class="zona-nav-footer">           
-        <ul class="lista-footer">
-          <li>Mail: delbenemotoshop@gmail.com</li>
-          <li>Whatsapp: 11 6350 8103</li>
-          <li>Tel.: (0220) 477 1196 </li>
-          <li>Dirección: Dr. Marcos Paz (RP N° 40) 1539 - Marcos Paz (Bs. As)</li>                  
-        </ul>
-        <div>  
+      <nav class="zona-nav-footer">   
+        <div> 
+          <ul class="lista-footer">
+            <li>Mail: delbenemotoshop@gmail.com</li>
+            <li>Whatsapp: 11 6350 8103</li>
+            <li>Tel.: (0220) 477 1196 </li>
+            <li>Dirección: Dr. Marcos Paz (RP N° 40) 1539 - Marcos Paz (Bs. As)</li>                  
+          </ul>
+        </div>       
+        <div class="container-redes">  
           <ul class="redes-sociales">
             <li class="lista-redes"><a href="https://www.facebook.com/delbene.motoshop" target="_blank" rel="noopener"><img src="imagenes/redes-sociales/icono-facebook.png" alt="Facebook" class="icono-facebook"></a></li>
             <li class="lista-redes"><a href="https://instagram.com/delbenemotoshop?utm_medium=copy_link" target="_blank" rel="noopener"><img src="imagenes/redes-sociales/logo-instagram.png" alt="Instagram" class="icono-instagram"></a></li>
